--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -8,3 +8,8 @@ $positive  : #21BA45
 $negative  : #C10015
 $info      : #31CCEC
 $warning   : #F2C037
+
+$normal-color: #31CCEC
+$warning-color: #31CCEC
+$danger-color: #C10015
+$alerta-color: #C10015
