--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,24 @@ $warning-color: #f2c037;
 $danger-color: #c10015;
 $alerta-color: #c10015;
 
+* {
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px $primary;
+    background-color: #f5f5f5;
+  }
+
+  &::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    background-color: #f5f5f5;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $primary;
+    border: 2px solid #4e7a46;
+  }
+}
+
 :root {
   --q-color-primary: $primary;
   --q-color-secondary: $secondary;
